[package]
name = "yewdux"
version = "0.8.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yewdux/yewdux"
readme = "README.md"
description = "Ergonomic state management for Yew applications"
keywords = ["yew", "state", "redux", "shared", "container"]
categories = ["wasm", "web-programming", "rust-patterns"]

[features]
default = ["future"]
future = ["wasm-bindgen-futures"]

[dependencies]
anymap = "0.12"
log = "0.4"
serde = { version = "1.0" }
serde_json = "1.0"
slab = "0.4"
thiserror = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = "0.3"
yew = { git = "https://github.com/tempbottle/yew.git", rev="7ddf267" }
yewdux-macros = { path = "../yewdux-macros" }

[dev-dependencies]
async-std = { version = "1.11", features = ["attributes"] }

